Move detailed documentation to wiki (#12)